--- a/views/partials/layouts/header.ejs
+++ b/views/partials/layouts/header.ejs
@@ -2,12 +2,12 @@
     <div class="header-top">
         <div class="brand-top">
             <div class="logo-top">
-                <a href=""><img src="/images/2cdb35de00e42db380d3804b3453dd43.png" alt=""></a>
+                <a href="/"><img src="/images/2cdb35de00e42db380d3804b3453dd43.png" alt=""></a>
             </div>
         </div>
         <div class="menu-top">
             <div class="menu-list">
-                <a href="" class="menu-link active">Trang chủ</a>
+                <a href="/" class="menu-link active">Trang chủ</a>
                 <a href="" class="menu-link">Tin tức</a>
                 <a href="" class="menu-link">Dịch vụ</a>
                 <a href="" class="menu-link">Hướng dẫn</a>
