--- a/views/partials/layouts/scripts.ejs
+++ b/views/partials/layouts/scripts.ejs
@@ -1,3 +1,4 @@
 <script src="/javascripts/jquery.min.js"></script>
+<script src="/javascripts/owl.carousel.js"></script>
 <script src="/javascripts/myjs.js"></script>
 <script type="module" src="/javascripts/test.js"></script>
