--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
             <p class="login-title">Đăng nhập để sử dụng dịch vụ</p>
         </div>
         <div class="login-body">
-            <form action="admin/user" class="form-group" method="POST">
+            <form action="/user" class="form-group" method="POST">
                 <div class="login-form">
                     <label for="">Nhập tên</label>
                     <input type="text" name="user" placeholder="Tên của bạn"required> 
