--- a/views/pharmacy-page.ejs
+++ b/views/pharmacy-page.ejs
@@ -17,7 +17,7 @@
                     <img src="/images/no-user.jpg" alt="">
                 </div>
                 <a href="" class="link-detail-user">Trang cá nhân</a>
-                <a href="/doctor/<%= iddoctor %>/patient/page-1" class="link-detail-user">Quản lý bệnh nhân</a>
+                <a href="/doctor/<%= iddoctor %>/drug-bill/page-1" class="link-detail-user">Quản lý đơn thuốc</a>
                 <a href="/logout" class="link-detail-user">Đăng xuất</a>
             </div>
             <div class="btn-show-user">
@@ -30,7 +30,7 @@
         <div class="categories-1">
             <div class="content">
                 <div class="header">
-                    <p class="title">Bác sĩ</p>
+                    <p class="title">Cửa hàng thuốc</p>
                 </div>
             </div>
         </div>
@@ -41,9 +41,7 @@
                         <p class="title">Danh mục</p>
                     </div>
                     <div class="menu-item">
-                        <a href="/doctor/<%= iddoctor %>/patient/page-1" class="link-item"><p>Tất cả bệnh nhân</p></a>
-                        <a href="" class="link-item"><p>Bệnh nhân đang điều trị</p></a>
-                        <a href="" class="link-item"><p>Bệnh nhân đã điều trị</p></a>
+                        <a href="/pharmacy/<%= iddoctor %>/drug-bill/page-1" class="link-item"><p>Tất cả đơn thuốc</p></a>
                     </div>
                     
                 </div>
@@ -52,7 +50,7 @@
                         <p class="title">Tìm kiếm theo tên</p>
                     </div>
                     <div class="box-search">
-                        <form action="/doctor/<%= iddoctor %>/patient/page-<%= page %>" method="GET">
+                        <form action="/pharmacy/<%= iddoctor %>/drug-bill/page-<%= page %>" method="GET">
                             <label for="search"></label>
                             <input type="search" name="search" id="search">
                             <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
@@ -65,16 +63,17 @@
                 <div class="item">
                     <div class="header-body">
                         <a href="" class="link-filter"><p><i class="fa fa-filter" aria-hidden="true"></i> Lọc</p></a>
-                        <a href="/doctor/<%= iddoctor %>/patient/page-<% if (page == 1) { %><%= 1 %><% } else { %><%= page*1 - 1 %><% } if (isSearch) { %><%= '?search=' + search %><% } else { %><%= '' %><% } %>" title="trang trước" class="link-prev-page"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
-                        <a href="/doctor/<%= iddoctor %>/patient/page-<% if (page == numPage) { %><%= numPage %><% } else { %><%= page*1 + 1 %><% } if (isSearch) { %><%= '?search=' + search %><% } else { %><%= '' %><% } %>" title="trang sau" class="link-next-page"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+                        <a href="/pharmacy/<%= iddoctor %>/drug-bill/page-<% if (page == 1) { %><%= 1 %><% } else { %><%= page*1 - 1 %><% } if (isSearch) { %><%= '?search=' + search %><% } else { %><%= '' %><% } %>" title="trang trước" class="link-prev-page"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+                        <a href="/pharmacy/<%= iddoctor %>/drug-bill/page-<% if (page == numPage) { %><%= numPage %><% } else { %><%= page*1 + 1 %><% } if (isSearch) { %><%= '?search=' + search %><% } else { %><%= '' %><% } %>" title="trang sau" class="link-next-page"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
                     </div>
                     <div class="menu-item">
                         <% data.forEach(item => { %>
                             <div class="box-item">
-                                <a href="/doctor/<%= iddoctor %>/patient/<%= item['IDBENHNHAN'] %>/bill-drug/0" title="<%= item['TENBENHNHAN'] %> - <%= item['IDBENHNHAN'] %> " class="box-item-link">
-                                    <div class="logo-item"><img src="/images/no-user.jpg" alt=""></div>
-                                    <p class="infor-1">Mã bệnh: <%= item['IDBENHNHAN'] %> </p>
-                                    <p class="infor-2">Họ tên: <%= item['TENBENHNHAN'] %> </p>
+                                <a href="/pharmacy/<%= iddoctor %>/drug-bill/page-<%= page %> /iddonthuoc" title="<%= item['IDDONTHUOC'] %>" class="box-item-link">
+                                    <!-- <div class="logo-item"><img src="/images/no-user.jpg" alt=""></div>
+                                    <p class="infor-1">Mã bệnh:  </p>
+                                    <p class="infor-2">Họ tên: </p> -->
+                                    adsadsadasd
                                 </a>
                             </div>
                         <% }) %>                                                                                                                                                                                                                                                                                                                                                                                                        
