--- a/views/doctor-page.ejs
+++ b/views/doctor-page.ejs
@@ -17,7 +17,7 @@
                     <img src="/images/no-user.jpg" alt="">
                 </div>
                 <a href="" class="link-detail-user">Trang cá nhân</a>
-                <a href="/doctor/<%= iddoctor %>/patient/page-1" class="link-detail-user">Quản lý bệnh nhân</a>
+                <a href="/doctor/<%= iddoctor %>/patient/page-1" class="link-detail-user">Xem bệnh nhân</a>
                 <a href="/logout" class="link-detail-user">Đăng xuất</a>
             </div>
             <div class="btn-show-user">
