--- a/views/partials/layouts/footer.ejs
+++ b/views/partials/layouts/footer.ejs
@@ -53,7 +53,7 @@
             <p class="title">Cập nhật thông tin mới nhất!</p>
             <form class="form-group">
                 <div class="input-form">
-                    <input placeholder="Email của bạn" required>
+                    <input type="text" placeholder="Email của bạn" required>
                     <button class="submit">Đăng ký</button>
                 </div> 
             </form>
