--- a/views/partials/layouts/styles.ejs
+++ b/views/partials/layouts/styles.ejs
@@ -2,4 +2,5 @@
 <link rel="stylesheet" href="/font-awesome/css/all.min.css">
 <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="/stylesheets/owl.carousel.css">
+<link rel="stylesheet" href="/stylesheets/jquery-ui.css">
 <link rel="stylesheet" href="/stylesheets/style.css">
